<resources>
    <string name="app_name">Stint</string>
    <string name="btn_login_text">Login</string>
    <string name="btn_register_text">Register</string>
    <string name="tv_forgot_password_text">Forgot Password ?</string>
    <string name="btn_fb_login_text">Login with Facebook</string>
    <string name="btn_gplus_login_text">Login with Google+</string>
    <string name="btn_registrtion_done">Done</string>
    <string name="btn_registration_confmpswd_text">CONFIRM PASSWORD</string>
    <string name="tv_registration_header_text">REGISTRATION</string>
    <string name="edt_reg_password_text">PASSWORD</string>
    <string name="edt_reg_username_text">USERNAME</string>
    <string name="edt_reg_phn_text">PHONE NUMBER</string>
    <string name="edt_reg_email_text">EMAIL</string>
    <string name="edt_reg_first_name_text">FIRST NAME</string>
    <string name="edt_reg_last_name_text">LAST NAME</string>
    <string name="edt_frgtpswd_hint">Your Email</string>
    <string name="facebook_app_id">1900625356819091</string>
    <string name="btn_tut_paypl_hint">Next</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tutorial">TutorialActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!--Progress Dialog-->

    <string name="progress_dialog_login_message">Loading...</string>
    <string name="login_successful">Successfully Login</string>
    <string name="check_network_error">Oops something went wrong Please check your internet connection</string>

    <!--Shared Preference-->
    <string name="user_pref_name">userPref</string>

    <string name="user_location_pref">userLocPref</string>

    <string name="email">email</string>
    <!--Integer Mode of Preferences-->
    <integer name="user_preference_mode">0</integer>

    <!--Integers for length of widgets  text-->
    <integer name="password_max_length">150</integer>
    <integer name="username_max_length">150</integer>
    <integer name="phone_number_max_length">10</integer>
    <integer name="email_max_length">150</integer>

    <!--Browse Job-->
    <string name="browse_job_search">Search</string>

    <!--Validation Text-->
    <string name="email_empty">Please check , No input in emailbox </string>
    <string name="password_empty">Please input something  in passoword </string>
    <string name="not_valid_email">Not a valid email</string>

    <!--Navigation list text-->
    <string name="browse_job_nav">Browse Job</string>

    <string name="title_POST_JOB">POST JOB</string>
</resources>
