<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_stint"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/logo_stint_height"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@drawable/edit_text_bg"
            android:orientation="horizontal"
            android:padding="@dimen/padingLogin">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/email_icon"
                android:inputType="text"
                android:maxLines="1"
                android:paddingLeft="@dimen/activity_horizontal_margin" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@drawable/edit_text_bg"
            android:orientation="horizontal"
            android:padding="@dimen/padingLogin">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/password_icon"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="@dimen/activity_horizontal_margin" />
        </LinearLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@drawable/button_login"
            android:text="@string/btn_login_text"
            android:textColor="@color/editTextBorder" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@drawable/button_login"
            android:paddingEnd="@dimen/padingLogin"
            android:paddingStart="@dimen/padingLogin"
            android:text="@string/btn_register_text"
            android:textColor="@color/editTextBorder" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/padingLogin"
            android:paddingStart="@dimen/padingLogin"
            android:text="@string/tv_forgot_password_text"
            android:textColor="@color/editTextBorder" />

    </LinearLayout>
</ScrollView>
