<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_stint"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/imvRegstr"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/header"
            android:gravity="center"
            android:text="@string/tv_registration_header_text"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_reg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/activity_horizontal_margin_reg"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/activity_horizontal_margin_reg"
                android:layout_weight="1"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/reg_wid_height"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_weight="0.5"
                    android:background="@drawable/detail_box"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/drawable_padding_20" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/reg_wid_height"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_weight="0.5"
                    android:background="@drawable/detail_box"
                    android:drawablePadding="@dimen/drawable_padding_20"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/drawable_padding_20" />
            </LinearLayout>


            <EditText

                android:layout_width="match_parent"
                android:layout_height="@dimen/reg_wid_height"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin_reg_widget"
                android:background="@drawable/detail_box"
                android:drawableLeft="@drawable/email_icon"
                android:drawablePadding="@dimen/drawable_padding_20"
                android:inputType="text"
                android:maxLines="1"
                android:paddingLeft="@dimen/drawable_padding_20"
                android:paddingRight="@dimen/drawable_padding_20" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/reg_wid_height"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin_reg_widget"
                android:background="@drawable/detail_box"
                android:drawableLeft="@drawable/mobile_icon"
                android:drawablePadding="@dimen/drawable_padding_20"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="@dimen/drawable_padding_20"
                android:paddingRight="@dimen/drawable_padding_20" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/reg_wid_height"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin_reg_widget"
                android:background="@drawable/detail_box"
                android:drawableLeft="@drawable/username_icon"
                android:drawablePadding="@dimen/drawable_padding_20"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="@dimen/activity_horizontal_margin" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/reg_wid_height"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin_reg_widget"
                android:background="@drawable/detail_box"
                android:drawableLeft="@drawable/password_icon"
                android:drawablePadding="@dimen/drawable_padding_20"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="@dimen/activity_horizontal_margin" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/reg_wid_height"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin_reg_widget"
                android:background="@drawable/detail_box"
                android:drawableLeft="@drawable/password_icon"
                android:drawablePadding="@dimen/drawable_padding_20"
                android:hint="@string/btn_registration_confmpswd_text"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="@dimen/activity_horizontal_margin" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin_register"
                android:layout_marginRight="@dimen/activity_horizontal_margin_register"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:background="@drawable/button_login"
                android:text="@string/btn_registrtion_done"
                android:textColor="@color/editTextBorder" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
